# figma-to-code-claude-pipeline

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.example.json  settings.json
.claude/agents/: api-scaffold.md  code-reviewer.md  design-system-check.md  design-system-component.md  figma-impl.md  test-writer.md
.claude/hooks/: README.md  read_hook.js  tsc.js
.claude/skills/audit-fe/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/local-setup/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/test-fe/: SKILL.md
backend/: .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: projects.py  tasks.py  users.py
backend/app/data/: seed.py  store.py
backend/app/schemas/: __init__.py  project.py  task.py  user.py
backend/scripts/: run_local.sh  test_local.sh
backend/tests/: conftest.py  test_projects.py  test_tasks.py
design-system/: .gitignore  .prettierignore  CLAUDE.md  package.json  pnpm-lock.yaml  tsconfig.json
design-system/apps/storybook/: package.json  tsconfig.json
design-system/apps/storybook/.storybook/: main.ts  preview.tsx
design-system/apps/storybook/src/: Accordion.stories.tsx  Alert.stories.tsx  AppBar.stories.tsx  Autocomplete.stories.tsx  Avatar.stories.tsx  Backdrop.stories.tsx  (+37 more)
design-system/scripts/: sync-figma-tokens.ts  validate-tokens.ts
scripts/: init-claude.js
web/: .prettierrc  CLAUDE.md  README.md  eslint.config.mjs  jest.config.ts  jest.setup.ts  next.config.ts  package.json  pnpm-lock.yaml  theme.d.ts
web/src/app/: layout.tsx  page.tsx  providers.tsx
(+14 files in other folders)
